# wisp

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS.md  Makefile  README  README.md  Wisp.tcl  conda-lock.yml  environment.yml  mkdocs.yml  notify_poetry_of_conda.py  pixi.toml  pkgIndex.tcl  pyproject.toml  requirements.txt  wisp.py
.github/workflows/: build.yml  codecov.yml  deploy-docs.yml  docs.yml  linter.yml  pypi-test-deploy.yml  python-tests.yml  tests.yml
docs/: conf.py  gen_ref_pages.py
docs/_templates/: versions.html
docs/css/: base.css
example_commandline/: README  README.txt  simple_example.sh
tests/: conftest.py  test_wisp.py
wisp/: __init__.py  cli.py  config.py  contexts.py  io.py  logger.py  paths.py  run.py  structure.py  traj.py  utils.py  viz.py
