[tool.poetry]
name = "wisp"
version = "2023.10.15"
description = ""
authors = [
    "Durrant Lab",
]
readme = "README.md"
license = "AFL-3.0 "

[tool.poetry.scripts]
wisp = "wisp.run:main"

[tool.poetry.dependencies]
# Scipy restricts max Python version for now (2023-10-21).
python = "<3.13,>=3.9"
networkx = "^3.2"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.0"
pyupgrade = "^3.15.0"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

["tool.poetry.group.conda.dependencies"]
appdirs = "^1.4.4"
attrs = "^23.1.0"
Brotli = "^1.1.0"
build = "^0.10.0"
CacheControl = "^0.13.1"
cachy = "^0.3.0"
certifi = "^2023.7.22"
cffi = "^1.16.0"
cfgv = "^3.3.1"
charset-normalizer = "^3.3.0"
cleo = "^2.0.1"
click = "^8.1.7"
click-default-group = "^1.2.4"
clikit = "^0.6.2"
colorama = "^0.4.6"
conda_lock = "^2.4.1"
crashtest = "^0.4.1"
cryptography = "^41.0.4"
distlib = "^0.3.7"
dulwich = "^0.21.6"
ensureconda = "^1.4.3"
filelock = "^3.12.4"
gitdb = "^4.0.11"
GitPython = "^3.1.40"
html5lib = "^1.1"
identify = "^2.5.30"
idna = "^3.4"
importlib-metadata = "^6.8.0"
importlib-resources = "^6.1.0"
installer = "^0.7.0"
"jaraco.classes" = "^3.3.0"
jeepney = "^0.8.0"
Jinja2 = "^3.1.2"
jsonschema = "^4.17.3"
keyring = "^24.2.0"
MarkupSafe = "^2.1.3"
more-itertools = "^10.1.0"
msgpack = "^1.0.6"
nodeenv = "^1.8.0"
numpy = "^1.26.0"
packaging = "^23.2"
pastel = "^0.2.1"
pexpect = "^4.8.0"
pip = "^23.3.1"
pkginfo = "^1.9.6"
pkgutil_resolve_name = "^1.3.10"
platformdirs = "^3.11.0"
poetry = "^1.6.1"
poetry-core = "^1.7.0"
poetry-plugin-export = "^1.5.0"
pre-commit = "^3.5.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pydantic = "^2.4.2"
pydantic_core = "^2.10.1"
pylev = "^1.4.0"
pyproject_hooks = "^1.0.0"
pyrsistent = "^0.19.3"
PySocks = "^1.7.1"
PyYAML = "^6.0.1"
rapidfuzz = "^2.15.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
"ruamel.yaml" = "^0.17.39"
"ruamel.yaml.clib" = "^0.2.7"
SecretStorage = "^3.3.3"
setuptools = "^68.2.2"
shellingham = "^1.5.3"
six = "^1.16.0"
smmap = "^5.0.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.12.1"
toolz = "^0.12.0"
trove-classifiers = "^2023.10.18"
typing_extensions = "^4.8.0"
ukkonen = "^1.0.1"
urllib3 = "^1.26.18"
virtualenv = "^20.24.4"
webencodings = "^0.5.1"
wheel = "^0.41.2"
zipp = "^3.17.0"
