[project]
name = "wispy"
version = "0.0.0"
description = ""
authors = [
    {name = "Durrant Lab", email = "durrantj@pitt.edu"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
   "loguru>=0.7.2",
   "networkx>=3.4.2",
   "numpy>=2.2.2",
   "scipy>=1.15.1",
   "pyyaml>=6.0.2",
]

[project.scripts]
wisp = "wisp.run:main"

[build-system]
requires = ["setuptools"]

[tools.setuptools.packages.find]
where = ["."]
include = ["wisp*"]
